# fbx2.1glb

./: CMakeLists.txt  README.md
src/: FBX2glTF.cpp  FBX2glTF.h  mathfu.hpp
src/fbx/: Fbx2Raw.cpp  Fbx2Raw.hpp
src/gltf/: GltfModel.cpp  Raw2Gltf.hpp  TextureBuilder.cpp
src/raw/: RawModel.cpp
src/utils/: File_Utils.cpp  File_Utils.hpp
